Rename project + Add Monster deck

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<a href="index.html"><img src="eldritchhorror.png"></a>
-				<h1 class="title">Card Clerk</h1><sup><a href="history.html">v1.18</a></sup>
+				<h1 class="title">Card Clerk+</h1> <sup>v1</sup>
 			</div>
 		</div>
 		<div class="row hidden persisted gameForm" id="loadGameForm">
@@ -88,7 +88,7 @@
 			<script src="js/1.18/artifacts.js"></script>
 			<script src="js/1.18/spells.js"></script>
 			<script src="js/1.18/uniqueAssets.js"></script>
-
+			<script src="js/1.18/monsters.js"></script>
 
 
 			<!-- main script -->
