--- a/index.html
+++ b/index.html
@@ -1,163 +1,214 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-	<title>Eldritch Horror Card Clerk</title>
-	<!-- stylesheets -->
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css">
-	<link rel="stylesheet" href="css/1.18/custom.css">
-</head>
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<a href="index.html"><img src="eldritchhorror.png"></a>
-				<h1 class="title">Card Clerk+</h1> <sup>v1</sup>
-			</div>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Eldritch Horror Card Clerk+</title>
+		<link rel="stylesheet" href="css/index.css" />
+		<link rel="stylesheet" href="css/logic-operator.css" />
+		<link rel="stylesheet" href="css/mythos-grid.css" />
+		<!-- Data -->
+		<script src="js/global_variables.js"></script>
+		<script src="js/data_expansion.js"></script>
+		<script src="js/data_mythos.js"></script>
+		<script src="js/data_artifact.js"></script>
+		<script src="js/data_non_unique_asset.js"></script>
+		<script src="js/data_condition.js"></script>
+		<script src="js/data_monster.js"></script>
+		<script src="js/data_spell.js"></script>
+		<script src="js/data_unique_asset.js"></script>
+		<!-- Logic -->
+		<script src="js/deck.js"></script>
+		<script src="js/index.js"></script>
+		<script src="js/mythos-grid.js"></script>
+		<script src="js/utilities.js"></script>
+		<script src="js/session.js"></script>
+	</head>
+	<body>
+		<h1>ELDRITCH&nbsp;HORROR CARD&nbsp;CLERK+</h1>
+
+		<div id="startView" class="view start-view">
+			<button id="loadGameButton" type="button" onclick="loadGame()">Load Last Session</button>
+			<button id="newGameButton" type="button" onclick="startNewGame()">New Game</button>
+			<div>Your progress is automatically saved as you interact with the website.</div>
+			<div id="expansions" class="expansions"></div>
 		</div>
-		<div class="row hidden persisted gameForm" id="loadGameForm">
-			<div class="col-md-12">
-				<div class="panel panel-default newGameForm">
-					<div class="panel-heading">Load Game</div>
-					<div class="panel-body">
-						<p>Your last session can be loaded by pressing the Load Game button below.</p>
-						<div class="container">
-							<div class="row">
-								<div clas="col-md-1">
-									<button id="loadGameButton" class="btn btn-primary">Load Game</button>
-								</div>
-							</div>
-						</div>
+		<div id="mainView" class="view">
+			<fieldset>
+				<legend>Mythos Deck Composition</legend>
+				<!-- <label for="ancientOne">Preset: </label>
+				<select name="ancientOne">
+					<option>Azathoth</option>
+					<option>Cthulhu</option>
+				</select>
+				<br /> -->
+				<label>
+					<input type="checkbox" class="toggle-advance-composition" onclick="toggleMythosGrid(this.checked)" />Use Advanced Composition Mode
+				</label>
+				<div class="mythos-grid mythos-grid-simple">
+					<div class="mythos-stage">Stage I:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" />
+					<input type="number" min="0" class="mythos-blue" data-stage="1" data-color="blue" />
+					<div class="mythos-stage">Stage II:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="2" data-color="green" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="2" data-color="yellow" />
+					<input type="number" min="0" class="mythos-blue" data-stage="2" data-color="blue" />
+					<div class="mythos-stage">Stage III:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="3" data-color="green" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="3" data-color="yellow" />
+					<input type="number" min="0" class="mythos-blue" data-stage="3" data-color="blue" />
+				</div>
+				<div class="mythos-grid mythos-grid-advanced">
+					<div class="mythos-stage">Stage I Easy:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" data-difficulty="easy" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" data-difficulty="easy" />
+					<input type="number" min="0" class="mythos-blue" data-stage="1" data-color="blue" data-difficulty="easy" />
+					<div class="mythos-stage" data-stage="1">Stage I Normal:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" data-difficulty="normal" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" data-difficulty="normal" />
+					<input type="number" min="0" class="mythos-blue" data-stage="1" data-color="blue" data-difficulty="normal" />
+					<div class="mythos-stage" data-stage="1">Stage I Hard:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" data-difficulty="hard" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" data-difficulty="hard" />
+					<input type="number" min="0" class="mythos-blue" data-stage="1" data-color="blue" data-difficulty="hard" />
+					<div class="mythos-stage new-stage">Stage II Easy:</div>
+					<input type="number" min="0" class="mythos-green new-stage" data-stage="2" data-color="green" data-difficulty="easy" />
+					<input type="number" min="0" class="mythos-yellow new-stage" data-stage="2" data-color="yellow" data-difficulty="easy" />
+					<input type="number" min="0" class="mythos-blue new-stage" data-stage="2" data-color="blue" data-difficulty="easy" />
+					<div class="mythos-stage" data-stage="2">Stage II Normal:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="2" data-color="green" data-difficulty="normal" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="2" data-color="yellow" data-difficulty="normal" />
+					<input type="number" min="0" class="mythos-blue" data-stage="2" data-color="blue" data-difficulty="normal" />
+					<div class="mythos-stage" data-stage="2">Stage II Hard:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="2" data-color="green" data-difficulty="hard" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="2" data-color="yellow" data-difficulty="hard" />
+					<input type="number" min="0" class="mythos-blue" data-stage="2" data-color="blue" data-difficulty="hard" />
+					<div class="mythos-stage new-stage">Stage III Easy:</div>
+					<input type="number" min="0" class="mythos-green new-stage" data-stage="3" data-color="green" data-difficulty="easy" />
+					<input type="number" min="0" class="mythos-yellow new-stage" data-stage="3" data-color="yellow" data-difficulty="easy" />
+					<input type="number" min="0" class="mythos-blue new-stage" data-stage="3" data-color="blue" data-difficulty="easy" />
+					<div class="mythos-stage" data-stage="3">Stage III Normal:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="3" data-color="green" data-difficulty="normal" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="3" data-color="yellow" data-difficulty="normal" />
+					<input type="number" min="0" class="mythos-blue" data-stage="3" data-color="blue" data-difficulty="normal" />
+					<div class="mythos-stage" data-stage="3">Stage III Hard:</div>
+					<input type="number" min="0" class="mythos-green" data-stage="3" data-color="green" data-difficulty="hard" />
+					<input type="number" min="0" class="mythos-yellow" data-stage="3" data-color="yellow" data-difficulty="hard" />
+					<input type="number" min="0" class="mythos-blue" data-stage="3" data-color="blue" data-difficulty="hard" />
+				</div>
+				<button onclick="buildMythosDeck()">Build Mythos Deck</button>
+				<div class="mythos-error"></div>
+			</fieldset>
+
+			<form class="deck mythos">
+				<fieldset>
+					<legend class="deck__name">Mythos</legend>
+					Deck count: <span class="deck__count">0</span>.
+					<br />
+					<button type="button" onclick="drawMythosCard()">Draw</button>
+					<button type="button" class="toggle-history" onclick="toggleMythosHistory()">Toggle History</button>
+
+					<div class="last-drawn-card">
+						Last drawn:
+						<div class="no-newest-card">Unable to draw.</div>
+						<div class="newest-card"></div>
 					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row gameForm" id="newGameForm">
-			<div class="col-md-12">
-				<div class="panel panel-default newGameForm">
-					<div class="panel-heading">New Game</div>
-					<div class="panel-body">
-						<p>Select the Expansions you want to include in this game below and then press the New Game button to get
-							started. <span class="hidden persisted">Please notice that this will replace your previous session.</span>
-						</p>
-						<div class="container">
-							<div class="row" id="expansions"></div>
-							<div class="row">
-								<div clas="col-md-1">
-									<button id="newGameButton" class="btn btn-primary">New Game</button>
-								</div>
-							</div>
-						</div>
+
+					<div class="drawn-cards" style="display: none">
+						History (from last drawn to first):
+						<div class="history"></div>
 					</div>
-				</div>
-			</div>
+				</fieldset>
+			</form>
+
+			<div id="decks" class="decks"></div>
+
+			<button id="back" class="back-button" type="button" onclick="backToMainView()">Back</button>
 		</div>
 
+		<footer>
+			<a href="https://boardgamegeek.com/boardgame/146021/eldritch-horror">Eldritch Horror</a>
+			is a tabletop board game published by
+			<a href="https://www.fantasyflightgames.com/en/products/eldritch-horror/">Fantasy Flight Games,</a>
+			who owns all Copyright to the material.
+			<br />
+			This website is based on
+			<a href="https://boardgamegeek.com/thread/1730002/eldritch-horror-card-clerk">Eldritch Horror Card Clerk</a>
+			by Magnus Rydin.
+			<p>Have an issue or a feature idea? Log a ticket on GitHub <a href="https://github.com/metapone/eldritch-horror-card-clerk-plus/issues">here</a>.</p>
+		</footer>
 
-		<div class="row">
-			<div class="panel-group" id="panels"></div>
+		<!-- Templates -->
+		<template id="expansionItemTemplate">
+			<label class="expansion">
+				<input type="checkbox" name="expansions" class="expansion__checkbox" checked />
+				<img class="expansion__image" height="33" />
+				<div class="expansion__name"></div>
+			</label>
+		</template>
 
+		<template id="deckItemTemplate">
+			<form class="deck">
+				<fieldset>
+					<legend class="deck__name"></legend>
+					<input type="hidden" name="deckIndex" class="deck__index" />
+					Deck count: <span class="deck__count"></span>.
+					<br />
+					<button type="submit">Draw</button>
+					<button type="button" class="toggle-name-filter">Toggle Name Filter</button>
+					<button type="button" class="toggle-trait-filter">Toggle Trait Filter</button>
+					<button type="button" class="toggle-history">Toggle History</button>
 
-		</div>
-		<footer class="footer">
-			<div class="container">
-				<span class="text-muted credit"><a
-					href="https://boardgamegeek.com/boardgame/146021/eldritch-horror">Eldritch Horror</a> is a tabletop board game published by <a
-					href="https://www.fantasyflightgames.com/en/products/eldritch-horror/">Fantasy Flight Games</a>, who owns all Copyright to the material.</span>
-				</div>
-			</footer>
-
-
-			<!-- scripts -->
-			<script src="js/1.18/jquery-2.1.4.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-			<script src="js/1.18/jquery.tmpl.min.js"></script>
-			<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-
-			<!-- types -->
-			<script src="js/1.18/types.js"></script>
-
-
-			<!-- decks -->
-			<script src="js/1.18/assets.js"></script>
-			<script src="js/1.18/conditions.js"></script>
-			<script src="js/1.18/artifacts.js"></script>
-			<script src="js/1.18/spells.js"></script>
-			<script src="js/1.18/uniqueAssets.js"></script>
-			<script src="js/1.18/monsters.js"></script>
-
-
-			<!-- main script -->
-			<script src="js/1.18/main.js"></script>
-
-			<script id="deckPanelTemplate" type="text/html">
-				<div class="panel panel-default hidden currentGameForm ${name}" data-deck="${name}">
-					<div class="panel-heading">${name}</div>
-					<div class="panel-body">
-						<button id="draw${name}Button" class="btn btn-primary draw" data-name="${name}"
-						onclick="eldritch.main.deal(eldritch.main.getDeckByName('${name}'));">Draw card
-					</button>
-					<button data-toggle="collapse" data-target="#${name}TraitsToggle" class="btn">Toggle Traits Filter</button>
-					<button data-toggle="collapse" data-target="#${name}Toggle" class="btn">Toggle history</button>
-					<div id="${name}TraitsToggle" class="collapse">
-						<span>Logic operator : <input data-size="mini" class="logic-toggle" checked data-toggle="toggle" data-on="AND" data-off="OR" data-onstyle="primary" data-offstyle="secondary" type="checkbox"></span>
-						<br>
-						{{each(i,trait) availableTraits}}
-						<label class="checkbox-inline"><input class="filter" type="checkbox" value="${trait}"><span
-							class="badge">${trait}</span></label>
-							{{/each}}
-						</div>
-						<p class="count">Deck contains <span class="availableCards">${availableCards.length}</span> ${name}.</p>
-						<ul class="list-group lastDrawnCard"></ul>
-						<div id="${name}Toggle" class="collapse">
-							<p>Drawn cards:<br>
-								<ul class="list-group drawnCards"></ul>
-							</p>
-						</div>
+					<div class="name-filter" style="display: none">
+						Name:
+						<input name="nameFilter" class="name-filter__input" />
+						<datalist class="name-filter__suggestion"></datalist>
 					</div>
-				</div>
-			</script>
-			<script id="availableExpansionListTemplate" type="text/html">
-				<div class="col-md-1">
-					<input class="possibleDeck" type="checkbox" value="${name}" checked>
-					<img src="${image}">
-					<label>${name}</label>
-				</div>
-			</script>
-			<script id="selectedExpansionListTemplate" type="text/html">
-				<div class="col-md-1">
-					<img src="${image}">
-				</div>
-			</script>
-			<script id="historicalCardTemplate" type="text/html">
-				<li class="list-group-item"><span class="cardname">${name}</span>
-					<span class="glyphicon glyphicon-remove" data-id="${id}"></span>
-					{{each(i,trait) traits}}
-					<span class="trait badge">${trait}</span>
-					{{/each}}
 
-				</li>
-			</script>
-			<script>
-				(function (i, s, o, g, r, a, m) {
-					i['GoogleAnalyticsObject'] = r;
-					i[r] = i[r] || function () {
-						(i[r].q = i[r].q || []).push(arguments)
-					}, i[r].l = 1 * new Date();
-					a = s.createElement(o),
-					m = s.getElementsByTagName(o)[0];
-					a.async = 1;
-					a.src = g;
-					m.parentNode.insertBefore(a, m)
-				})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+					<div class="trait-filter" style="display: none">
+						<div class="logic-operator-wrapper">
+							Logic Operator:
+							<label class="logic-operator">
+								<input type="checkbox" name="isOr" />
+								<div data-unchecked="AND" data-checked="OR" class="logic-operator__switch"></div>
+							</label>
+						</div>
+						<div class="traits"></div>
+					</div>
 
-				ga('create', 'UA-92185676-1', 'auto');
-				ga('send', 'pageview');
+					<div class="last-drawn-card">
+						Last drawn:
+						<div class="no-newest-card">Unable to draw.</div>
+						<div class="newest-card"></div>
+					</div>
 
-			</script>
-		</body>
-		</html>
+					<div class="drawn-cards" style="display: none">
+						History (from last drawn to first):
+						<div class="history"></div>
+					</div>
+				</fieldset>
+			</form>
+		</template>
+
+		<template id="traitItemTemplate">
+			<label class="trait">
+				<input type="checkbox" name="traits" class="trait__value" />
+				<span class="trait__name"></span>
+			</label>
+		</template>
+
+		<template id="cardItemTemplate">
+			<div class="card"></div>
+		</template>
+
+		<template id="historyItemTemplate">
+			<div class="card">
+				<span class="card__name"></span>
+				<button type="button" class="card__shuffleIn"></button>
+			</div>
+		</template>
+
+		<script src="js/index_postRender.js"></script>
+	</body>
+</html>
