--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<div id="expansions" class="expansions"></div>
 		</div>
 		<div id="mainView" class="view">
-			<fieldset>
-				<legend>Mythos Deck Composition</legend>
+			<fieldset class="deck">
+				<div class="deck__name">Mythos Deck Composition</div>
 				<!-- <label for="ancientOne">Preset: </label>
 				<select name="ancientOne">
 					<option>Azathoth</option>
@@ -103,7 +103,7 @@
 
 			<form class="deck mythos">
 				<fieldset>
-					<legend class="deck__name">Mythos</legend>
+					<div class="deck__name">Mythos</div>
 					Deck count: <span class="deck__count">0</span>.
 					<br />
 					<button type="button" onclick="drawMythosCard()">Draw</button>
@@ -151,11 +151,11 @@
 		<template id="deckItemTemplate">
 			<form class="deck">
 				<fieldset>
-					<legend class="deck__name"></legend>
+					<div class="deck__name"></div>
 					<input type="hidden" name="deckIndex" class="deck__index" />
 					Deck count: <span class="deck__count"></span>.
 					<br />
-					<button type="submit">Draw</button>
+					<button type="submit" class="draw">Draw</button>
 					<button type="button" class="toggle-name-filter">Toggle Name Filter</button>
 					<button type="button" class="toggle-trait-filter">Toggle Trait Filter</button>
 					<button type="button" class="toggle-history">Toggle History</button>
