Display traits for last drawn cards

--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
 			<div class="card"></div>
 		</template>
 
+		<template id="lastDrawnCardItemTemplate">
+			<div class="card last-drawn">
+				<div class="last-drawn__name"></div>
+				<div class="last-drawn__traits"></div>
+			</div>
+		</template>
+
 		<template id="historyItemTemplate">
 			<div class="card">
 				<span class="card__name"></span>
