Change (Non-Epic) to subtitle

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<template id="deckItemTemplate">
 			<form class="deck">
 				<fieldset>
-					<div class="deck__name"></div>
+					<div><span class="deck__name"></span><span class="deck__subtitle"></span></div>
 					<input type="hidden" name="deckIndex" class="deck__index" />
 					Deck count: <span class="deck__count"></span>.
 					<br />
