--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 				</label>
 				<form class="mythos-grid-form">
 					<div class="mythos-grid mythos-grid-simple">
+						<div class="mythos-stage">Starting Rumor:</div>
+						<div></div>
+						<div></div>
+						<input type="number" min="0" class="mythos-blue" data-stage="0" data-color="blue" />
 						<div class="mythos-stage">Stage I:</div>
 						<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" />
 						<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" />
@@ -59,10 +63,22 @@
 						<input type="number" min="0" class="mythos-blue" data-stage="3" data-color="blue" />
 					</div>
 					<div class="mythos-grid mythos-grid-advanced">
-						<div class="mythos-stage">Stage I Easy:</div>
-						<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" data-difficulty="easy" />
-						<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" data-difficulty="easy" />
-						<input type="number" min="0" class="mythos-blue" data-stage="1" data-color="blue" data-difficulty="easy" />
+						<div class="mythos-stage">Starting Rumor Easy:</div>
+						<div></div>
+						<div></div>
+						<input type="number" min="0" class="mythos-blue" data-stage="0" data-color="blue" data-difficulty="easy" />
+						<div class="mythos-stage">Starting Rumor Normal:</div>
+						<div></div>
+						<div></div>
+						<input type="number" min="0" class="mythos-blue" data-stage="0" data-color="blue" data-difficulty="normal" />
+						<div class="mythos-stage">Starting Rumor Hard:</div>
+						<div></div>
+						<div></div>
+						<input type="number" min="0" class="mythos-blue" data-stage="0" data-color="blue" data-difficulty="hard" />
+						<div class="mythos-stage new-stage">Stage I Easy:</div>
+						<input type="number" min="0" class="mythos-green new-stage" data-stage="1" data-color="green" data-difficulty="easy" />
+						<input type="number" min="0" class="mythos-yellow new-stage" data-stage="1" data-color="yellow" data-difficulty="easy" />
+						<input type="number" min="0" class="mythos-blue new-stage" data-stage="1" data-color="blue" data-difficulty="easy" />
 						<div class="mythos-stage" data-stage="1">Stage I Normal:</div>
 						<input type="number" min="0" class="mythos-green" data-stage="1" data-color="green" data-difficulty="normal" />
 						<input type="number" min="0" class="mythos-yellow" data-stage="1" data-color="yellow" data-difficulty="normal" />
