Add traits to history list

--- a/index.html
+++ b/index.html
@@ -230,8 +230,9 @@
 		</template>
 
 		<template id="historyItemTemplate">
-			<div class="card">
-				<span class="card__name"></span>
+			<div class="card card-history">
+				<div class="card__name"></div>
+				<div class="card__traits"></div>
 				<button type="button" class="card__shuffleIn"></button>
 			</div>
 		</template>
