Add shuffle button

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 					Deck count: <span class="deck__count"></span>.
 					<br />
 					<button type="submit" class="draw">Draw</button>
+					<button type="button" class="shuffle">Shuffle</button>
 					<button type="button" class="toggle-name-filter">Toggle Name Filter</button>
 					<button type="button" class="toggle-trait-filter">Toggle Trait Filter</button>
 					<button type="button" class="toggle-cost-filter">Toggle Cost Filter</button>
