Add shuffle function for Mythos + improve shuffle feedback by changing count temporarily

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 					Deck count: <span class="deck__count">0</span>.
 					<br />
 					<button type="button" onclick="drawMythosCard()">Draw</button>
+					<button type="button" onclick="shuffleMythosDeck()">Shuffle</button>
 					<button type="button" class="toggle-history" onclick="toggleMythosHistory()">Toggle History</button>
 
 					<div class="last-drawn-card">
