Fix Dark Mode hiding shuffle in buttons and website being too wide on desktop

--- a/index.html
+++ b/index.html
@@ -133,27 +133,27 @@
 						<legend>Drawing from the Box</legend>
 						<div class="traits">
 							<label class="trait">
-								<input type="checkbox" name="traits" class="trait__value" value="Green">
+								<input type="checkbox" name="traits" class="trait__value" value="Green" />
 								<span class="trait__name">Green</span>
 							</label>
 							<label class="trait">
-								<input type="checkbox" name="traits" class="trait__value" value="Yellow">
+								<input type="checkbox" name="traits" class="trait__value" value="Yellow" />
 								<span class="trait__name">Yellow</span>
 							</label>
 							<label class="trait">
-								<input type="checkbox" name="traits" class="trait__value" value="Blue">
+								<input type="checkbox" name="traits" class="trait__value" value="Blue" />
 								<span class="trait__name">Blue</span>
 							</label>
 							<label class="trait">
-								<input type="checkbox" name="traits" class="trait__value" value="Easy">
+								<input type="checkbox" name="traits" class="trait__value" value="Easy" />
 								<span class="trait__name">Easy</span>
 							</label>
 							<label class="trait">
-								<input type="checkbox" name="traits" class="trait__value" value="Normal">
+								<input type="checkbox" name="traits" class="trait__value" value="Normal" />
 								<span class="trait__name">Normal</span>
 							</label>
 							<label class="trait">
-								<input type="checkbox" name="traits" class="trait__value" value="Hard">
+								<input type="checkbox" name="traits" class="trait__value" value="Hard" />
 								<span class="trait__name">Hard</span>
 							</label>
 						</div>
@@ -192,10 +192,11 @@
 			This website is based on
 			<a href="https://boardgamegeek.com/thread/1730002/eldritch-horror-card-clerk">Eldritch Horror Card Clerk</a>
 			by Magnus Rydin.
-			<p>
-				Have an issue or a feature idea? Log a ticket on GitHub
-				<a href="https://github.com/metapone/eldritch-horror-card-clerk-plus/issues">here</a>.
-			</p>
+			<br />
+			Have an issue or a feature idea? Log a ticket on GitHub
+			<a href="https://github.com/metapone/eldritch-horror-card-clerk-plus/issues">here</a>
+			or made a comment on BoardGameGeek
+			<a href="https://boardgamegeek.com/thread/3186841/eh-card-clerk-plus-website">here</a>.
 		</footer>
 
 		<!-- Templates -->
@@ -246,9 +247,7 @@
 						<div class="traits"></div>
 					</div>
 
-					<div class="cost-filter" style="display: none">
-						Cost: <span class="costs"></span>
-					</div>
+					<div class="cost-filter" style="display: none">Cost: <span class="costs"></span></div>
 
 					<div class="last-drawn-card">
 						Last drawn:
