Add badge to Mythos history + colorize Mythos badges

--- a/index.html
+++ b/index.html
@@ -283,7 +283,10 @@
 		</template>
 
 		<template id="cardItemTemplate">
-			<div class="card"></div>
+			<div class="card card-history card-history--mythos">
+				<div class="card__name"></div>
+				<div class="card__traits"></div>
+			</div>
 		</template>
 
 		<template id="lastDrawnCardItemTemplate">
