Add support for investigators

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="js/data_artifact.js"></script>
 		<script src="js/data_non_unique_asset.js"></script>
 		<script src="js/data_condition.js"></script>
+		<script src="js/data_investigator.js"></script>
 		<script src="js/data_monster.js"></script>
 		<script src="js/data_spell.js"></script>
 		<script src="js/data_unique_asset.js"></script>
